2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] For ‘make check DEBUG=1’, display the guile(1) invocation.

	* runtest.in: If env var ‘DEBUG’ is set, do ‘set -x’.

2011-09-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Don't use non-existent operator ‘!’ in request-cancel test.

	* basic.scm (test:request-cancel): Use a valid rhs expression
	for the ‘UPDATE’ command; drop ‘!’, which does not exist!

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.40 (tag v0.40)

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add test for double-call to ‘pg-trace’.

	* basic.scm (test:tracing-traced-connection): New test proc.
	(main): Use new test proc; update expected-pass number.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add and distribute test/OK.

	* OK: New file.
	* Makefile.am (EXTRA_DIST): Add OK.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Make runtest sanity-check more robust.

	* runtest.in: Don't look for '${prefix}' in ‘@GUILE_LIBSITE@’;
	instead, resolve the dir, whether from env or substitution,
	and check sanity of the result.

2011-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Avoid ‘return-it’.

	* basic.scm (test:request-cancel): Rephrase w/o ‘return-it’.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't chmod +x test/{runtest,show-platform}.

	* Makefile.am (TESTS_ENVIRONMENT): Invoke w/ sh(1).
	* show-platform.in: Update usage comment; nfc.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use $srcdir in runtest.

	* runtest.in (ts): Delete var;
	in Guile invocation, use ‘$srcdir’ directly.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Don't "manually load" anything.

	* meta.scm: Don't ‘manually-load’ any Guile-PG modules.
	* types-table.scm: Likewise.
	* testing.scm (manually-load): Delete proc.
	* runtest.in (tscm): Delete var.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Instantiate test/show-platform at configure-time.

	* show-platform.in: New file.